Shape Key Editor search/filter not working #80531

Closed
opened 2020-09-06 19:48:05 +02:00 by Art · 9 comments

System Information
Operating system: Windows 10 64
Graphics card: 2080 ti x 4

Blender Version
Broken: 2.80-2.91 Alpha Daily Build Sept 4th 2020
Worked: Never

Shape Key Editor name filtering search function does not filter or have any effect shape keys. Reproducible 100% of the time with any Blender version at least since January 2020.

image.png

The filter doesn't do anything regardless of the string used. On character figures with a couple hundred shape keys it becomes a bit of an issue.

image.png

**System Information** Operating system: Windows 10 64 Graphics card: 2080 ti x 4 **Blender Version** Broken: 2.80-2.91 Alpha Daily Build Sept 4th 2020 Worked: Never Shape Key Editor name filtering search function does not filter or have any effect shape keys. Reproducible 100% of the time with any Blender version at least since January 2020. ![image.png](https://archive.blender.org/developer/F8849895/image.png) The filter doesn't do anything regardless of the string used. On character figures with a couple hundred shape keys it becomes a bit of an issue. ![image.png](https://archive.blender.org/developer/F8849897/image.png)
Author

Added subscriber: @Domiek

Added subscriber: @Domiek
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Cannot reproduce here, see:

image.png
image.png

Maybe I am missing something, if so, please try to explain more how this is failing (maybe a screenshot/screencast might help here)

Cannot reproduce here, see: ![image.png](https://archive.blender.org/developer/F8849866/image.png) ![image.png](https://archive.blender.org/developer/F8849868/image.png) Maybe I am missing something, if so, please try to explain more how this is failing (maybe a screenshot/screencast might help here)
Author

Hi Philipp, I'm referring to the Shape Key Editor found in the Dope sheet. Sorry for not attaching a screenshot earlier.

image.png

The filter doesn't do anything regardless of the string used. On character figures with a couple hundred shape keys it becomes a bit of an issue. Additionally, Blender becomes unresponsive for 5-10 seconds when attempting to filter on objects with hundreds of shape keys.

image.png

I reported this on Blenderartists and another user said they are experiencing the same issue and to post it here.

Thank you

Hi Philipp, I'm referring to the Shape Key Editor found in the Dope sheet. Sorry for not attaching a screenshot earlier. ![image.png](https://archive.blender.org/developer/F8849895/image.png) The filter doesn't do anything regardless of the string used. On character figures with a couple hundred shape keys it becomes a bit of an issue. Additionally, Blender becomes unresponsive for 5-10 seconds when attempting to filter on objects with hundreds of shape keys. ![image.png](https://archive.blender.org/developer/F8849897/image.png) I reported this on Blenderartists and another user said they are experiencing the same issue and to post it here. Thank you
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Philipp Oeser self-assigned this 2020-09-07 10:59:07 +02:00
Member

Ah, OK, thx getting back.

Can confirm, will have a quick look.

Ah, OK, thx getting back. Can confirm, will have a quick look.

This issue was referenced by a292106799

This issue was referenced by a2921067994bdec012a5b9edc7168d10b1b0627c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80531
No description provided.